syntax = "proto3";

package chatpb;

option go_package = "github.com/Vovarama1992/go-ai-messenger/proto/chatpb;chatpb";

service ChatService {
  rpc GetChatByID (GetChatByIDRequest) returns (GetChatByIDResponse);
  rpc GetBindingsByChat (GetBindingsByChatRequest) returns (GetBindingsByChatResponse);
  rpc GetUserWithChatByThreadID (GetUserWithChatByThreadIDRequest) returns (GetUserWithChatByThreadIDResponse);
  rpc GetUsersByChatID (GetUsersByChatIDRequest) returns (GetUsersByChatIDResponse);
  rpc GetThreadContext(GetThreadContextRequest) returns (GetThreadContextResponse);
}

message GetChatByIDRequest {
  int64 id = 1;
}

message GetChatByIDResponse {
  int64 id = 1;
  int64 creator_id = 2;
  string type = 3;
  int64 created_at = 4;
}

message GetBindingsByChatRequest {
  int64 chat_id = 1;
}

message ChatBinding {
  int64 user_id = 1;
  string type = 2; // "advice" | "autoreply"
}

message GetUsersByChatIDRequest {
  int64 chat_id = 1;
}

message GetUsersByChatIDResponse {
  repeated int64 user_ids = 1;
}

message GetBindingsByChatResponse {
  repeated ChatBinding bindings = 1;
}

message GetUserWithChatByThreadIDRequest {
  string thread_id = 1;
}

message GetUserWithChatByThreadIDResponse {
  int64 user_id = 1;
  int64 chat_id = 2;
  string user_email = 3;
}

message GetThreadContextRequest {
  string thread_id = 1;
}

message GetThreadContextResponse {
  int64 sender_user_id = 1;
  string sender_user_email = 2;
  int64 chat_id = 3;
  repeated int64 chat_user_ids = 4;
}